--- a/index.html
+++ b/index.html
@@ -1,20 +1,182 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AJAX Project</title>
-  <link rel="icon" href="images/favicon.ico">
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/layout.css">
-  <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
-  <header>
-  </header>
-  <main>
-  </main>
-  <script src="js/data.js"></script>
-  <script src="js/main.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Crypto Watchlist</title>
+    <link rel="icon" href="images/favicon.ico" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/layout.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet" />
+  </head>
+  <body>
+    <header>
+      <div class="container" id="header">
+        <nav class="row" id="card-row">
+          <ul class="navbar column-full">
+            <li id="app-name">Crypto Watchlist</li>
+            <li><a href="#dashboard" class="nav-link">Dashboard</a></li>
+            <li><a href="#search" class="nav-link">Search</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main class="container">
+      <!-- SEARCH VIEW -->
+      <div data-view="search" class="">
+        <div class="column-full search-header">
+          <a href="#" class="watchlist-btn">My Watchlist</a>
+        </div>
+        <div class="column-full">
+          <label for="symbol" id="search-btn">Crypto Name</label>
+          <input
+            id="symbol"
+            type="text"
+            name="symbol"
+            placeholder="bitcoin"
+            required />
+          <button class="search-btn" id="searchButton">New Search</button>
+        </div>
+        <div class="column-full">
+          <div class="card" id="crypto-data">
+            <h2 class="data-name" id="dataName"></h2>
+            <p class="data-symbol" id="dataSymbol"></p>
+            <h1 class="data-priceUsd" id="dataPriceUsd"></h1>
+            <p class="data-changePercent24Hr" id="dataChangePercent24Hr"></p>
+            <h3 class="market-cap"></h3>
+            <h2 class="data-marketCapUsd" id="dataMarketCapUsd"></h2>
+          </div>
+        </div>
+      </div>
+      <!-- DASHBOARD VIEW -->
+      <div data-view="dashboard" class="dashboard hidden">
+        <div class="column-full search-header">
+          <a href="#" class="watchlist-btn">My Watchlist</a>
+        </div>
+        <div class="row">
+          <div class="card margin-right column-fourth">
+            <h2 class="data-name">
+              <img
+                src="./images/btc-logo.svg"
+                class="logo"
+                alt="bitcoin logo" />&nbsp;Bitcoin
+            </h2>
+            <p class="data-symbol">BTC</p>
+            <h1 class="data-priceUsd">$95487.31</h1>
+            <p class="data-changePercent24Hr">-4.49%</p>
+            <h3 class="market-cap">Market Cap</h3>
+            <h2 class="data-marketCapUsd">$1999.32 B</h2>
+            <button class="add-to-watchlist">Add to Watchlist</button>
+          </div>
+          <div class="card margin-left margin-right column-fourth">
+            <h2 class="data-name">
+              <img
+                src="./images/eth-logo.svg"
+                class="logo"
+                alt="bitcoin logo" />&nbsp;Ethereum
+            </h2>
+            <p class="data-symbol">ETH</p>
+            <h1 class="data-priceUsd">$2701.48</h1>
+            <p class="data-changePercent24Hr">-11.79%</p>
+            <h3 class="market-cap">Market Cap</h3>
+            <h2 class="data-marketCapUsd">$325.46 B</h2>
+            <button class="add-to-watchlist">Add to Watchlist</button>
+          </div>
+          <div class="card margin-left margin-right column-fourth">
+            <h2 class="data-name">
+              <img
+                src="./images/xrp-logo.svg"
+                class="logo"
+                alt="bitcoin logo" />&nbsp;XRP
+            </h2>
+            <p class="data-symbol">XRP</p>
+            <h1 class="data-priceUsd">$2.67</h1>
+            <p class="data-changePercent24Hr">+4.16%</p>
+            <h3 class="market-cap">Market Cap</h3>
+            <h2 class="data-marketCapUsd">$154.12 B</h2>
+            <button class="add-to-watchlist">Add to Watchlist</button>
+          </div>
+          <div class="card margin-left column-fourth">
+            <h2 class="data-name">
+              <img
+                src="./images/usdt-logo.svg"
+                class="logo"
+                alt="bitcoin logo" />&nbsp;Tether
+            </h2>
+            <p class="data-symbol">USDT</p>
+            <h1 class="data-priceUsd">$1.00</h1>
+            <p class="data-changePercent24Hr">-0.81%</p>
+            <h3 class="market-cap">Market Cap</h3>
+            <h2 class="data-marketCapUsd">$140.03 B</h2>
+            <button class="add-to-watchlist">Add to Watchlist</button>
+          </div>
+        </div>
+        <div class="row">
+          <div class="card margin-right column-fourth">
+            <h2 class="data-name">
+              <img
+                src="./images/sol-logo.svg"
+                class="logo"
+                alt="bitcoin logo" />&nbsp;Solana
+            </h2>
+            <p class="data-symbol">SOL</p>
+            <h1 class="data-priceUsd">$218.04</h1>
+            <p class="data-changePercent24Hr">+4.96%</p>
+            <h3 class="market-cap">Market Cap</h3>
+            <h2 class="data-marketCapUsd">$106.11 B</h2>
+            <button class="add-to-watchlist">Add to Watchlist</button>
+          </div>
+          <div class="card margin-left margin-right column-fourth">
+            <h2 class="data-name">
+              <img
+                src="./images/bnb-logo.svg"
+                class="logo"
+                alt="bitcoin logo" />&nbsp;BNB
+            </h2>
+            <p class="data-symbol">BNB</p>
+            <h1 class="data-priceUsd">$617.40</h1>
+            <p class="data-changePercent24Hr">-1.99%</p>
+            <h3 class="market-cap">Market Cap</h3>
+            <h2 class="data-marketCapUsd">$88.05 B</h2>
+            <button class="add-to-watchlist">Add to Watchlist</button>
+          </div>
+          <div class="card margin-left margin-right column-fourth">
+            <h2 class="data-name">
+              <img
+                src="./images/doge-logo.svg"
+                class="logo"
+                alt="bitcoin logo" />&nbsp;Dogecoin
+            </h2>
+            <p class="data-symbol">DOGE</p>
+            <h1 class="data-priceUsd">$0.288</h1>
+            <p class="data-changePercent24Hr">4.46%</p>
+            <h3 class="market-cap">Market Cap</h3>
+            <h2 class="data-marketCapUsd">$42.71 B</h2>
+            <button class="add-to-watchlist">Add to Watchlist</button>
+          </div>
+          <div class="card margin-left column-fourth">
+            <h2 class="data-name">
+              <img
+                src="./images/ada-logo.svg"
+                class="logo"
+                alt="bitcoin logo" />&nbsp;Cardano
+            </h2>
+            <p class="data-symbol">ADA</p>
+            <h1 class="data-priceUsd">$.0822</h1>
+            <p class="data-changePercent24Hr">+1.57%</p>
+            <h3 class="market-cap">Market Cap</h3>
+            <h2 class="data-marketCapUsd">$28.96 B</h2>
+            <button class="add-to-watchlist">Add to Watchlist</button>
+          </div>
+        </div>
+      </div>
+    </main>
+    <script src="js/data.js"></script>
+    <script src="js/main.js"></script>
+  </body>
 </html>
