generate dynamic html for search results

--- a/index.html
+++ b/index.html
@@ -42,15 +42,8 @@
             required />
           <button class="search-btn" id="searchButton">New Search</button>
         </div>
-        <div class="column-full">
-          <div class="card" id="crypto-data">
-            <h2 class="data-name" id="dataName"></h2>
-            <p class="data-symbol" id="dataSymbol"></p>
-            <h1 class="data-priceUsd" id="dataPriceUsd"></h1>
-            <p class="data-changePercent24Hr" id="dataChangePercent24Hr"></p>
-            <h3 class="market-cap"></h3>
-            <h2 class="data-marketCapUsd" id="dataMarketCapUsd"></h2>
-          </div>
+        <div class="column-full" id="search-results">
+          <div class="card" id="crypto-data"></div>
         </div>
       </div>
       <!-- DASHBOARD VIEW -->
