issue-2-create-a-watchlist

--- a/index.html
+++ b/index.html
@@ -43,9 +43,18 @@
           <button class="search-btn" id="searchButton">New Search</button>
         </div>
         <div class="column-full" id="search-results">
-          <div class="card" id="crypto-data"></div>
+          <div class="" id="crypto-data"></div>
         </div>
       </div>
+
+      <!-- Watchlist View -->
+      <div data-view="watchlist" class="hidden">
+        <div class="column-full watchlist-header">
+          <a href="#" class="add-btn">Add</a>
+        </div>
+        <div class="" id="watchlist"></div>
+      </div>
+
       <!-- DASHBOARD VIEW -->
       <div data-view="dashboard" class="dashboard hidden">
         <div class="column-full search-header">
