set spacing and alignment for dashboard view

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="column-full search-header">
           <a href="#" class="watchlist-btn">My Watchlist</a>
         </div>
-        <div class="row">
+        <div class="dash">
           <div class="card margin-right column-fourth">
             <h2 class="data-name">
               <img
