added icons for crypto in all views and revamped the dashboard view

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <a href="#" class="watchlist-btn">My Watchlist</a>
         </div>
         <div class="dash">
-          <div class="card margin-right column-fourth">
+          <!-- <div class="card margin-right column-fourth">
             <h2 class="data-name">
               <img
                 src="./images/btc-logo.svg"
@@ -174,7 +174,7 @@
             <h3 class="market-cap">Market Cap</h3>
             <h2 class="data-marketCapUsd">$28.96 B</h2>
             <button class="add-to-watchlist">Add to Watchlist</button>
-          </div>
+          </div> -->
         </div>
       </div>
     </main>
