added message on dashboard and cleaned up code

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
         <div class="column-full search-header">
           <a href="#" class="watchlist-btn">My Watchlist</a>
         </div>
+        <div class="top-crypto-message-container">
+          <p class="top-crypto-message"></p>
+        </div>
         <div class="dash"></div>
       </div>
     </main>
