--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
       </div>
     </main>
     <script src="js/data.js"></script>
-    <script src="js/main.js"></script>
+    <script type="module" src="js/config.js"></script>
+    <script type="module" src="js/main.js"></script>
   </body>
 </html>
